updated facebook tag

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     gtag('js', new Date());
     gtag('config', 'G-EZRBHBQ3YW');
   </script>
+ <!-- facebook Tag Manager -->
+
+ <meta name="facebook-domain-verification" content="md4mdsmejpjm33sfbb9akud4erg4k0" />
+
+  <!-- end Tag Manager -->
+
 
   <!-- Google Tag Manager -->
   <meta charset="utf-8" />
